# django_lesson

./: pyproject.toml
notes/noteapp/: models.py  urls.py  views.py
notes/noteapp/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py
notes/noteapp/templates/noteapp/: index.html
notes/notes/: settings.py
notes/users/: views.py
